Updated the Contact Email to Hello@ensosocial.app

--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                 <nav class="footer-links" aria-label="Footer navigation">
                     <a href="#" rel="nofollow">Terms</a>
                     <a href="#" rel="nofollow">Privacy</a>
-                    <a href="mailto:hello@enso.app">Contact</a>
+                    <a href="mailto:hello@ensosocial.app">Contact</a>
                 </nav>
             </div>
             <div class="footer-bottom">
